# WaspRunner

./: CONTRIBUTING.md  Cargo.toml  Dockerfile.wasm.example  LICENSE  README.md  index.html  justfile
.github/workflows/: ci.yml
branding/: README.md  colors.toml  manifest.json
crates/wasmrunner-cli/: Cargo.toml
crates/wasmrunner-cli/src/: main.rs
crates/wasmrunner-cli/src/commands/: build.rs  favorite.rs  list.rs  login.rs  mod.rs  publish.rs  register.rs  run.rs
crates/wasmrunner-core/: Cargo.toml
crates/wasmrunner-core/src/: config.rs  container.rs  lib.rs
crates/wasmrunner-runtime/: Cargo.toml
crates/wasmrunner-runtime/src/: lib.rs  manager.rs  wasmtime_runtime.rs
crates/wasmrunner-sandbox/: Cargo.toml
crates/wasmrunner-sandbox/src/: config.rs  lib.rs
docs/: architecture.md  cli.md  security.md  supabase.md
examples/hello-world/: Cargo.toml  Dockerfile.wasm
examples/hello-world/src/: main.rs
migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_sample_data.sql
