
[package]
name = "wasmrunner-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wasmrunner-core = { path = "../wasmrunner-core" }
wasmrunner-sandbox = { path = "../wasmrunner-sandbox" }

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
wasmtime.workspace = true
# wasmer.workspace = true
